--- a/README
+++ b/README
@@ -1,1 +1,14 @@
-This file was created by IntelliJ IDEA 12.1.6 for binding GitHub repository
+Spring mvc project about users and user groups.
+Technologies used:
+1.Spring security
+2.Apache tiles 3
+3.Log4j
+4.Apache MultipartFileResolver for uploading files
+5.GmailSMTPAppender to send emails 
+6.Spring data jpa
+7.ExceptionResolver 
+8.Ckeditor
+9.Bootstrap
+10.Tableclothjs
+11.Maven
+12.Hibernate
